:iphone: Fix overflow issue on mobile device

--- a/src/app/components/pulse/styles.scss
+++ b/src/app/components/pulse/styles.scss
@@ -66,25 +66,3 @@
     height: var(--pulse-height);
   }
 }
-
-@media (max-aspect-ratio: 4/3) {
-  .App .pulse-container {
-    overflow: hidden;
-    bottom: -33vh;
-    position: absolute;
-    &:first-of-type {
-      .item:nth-child(2n) {
-        opacity: 0;
-      }
-
-      bottom: unset;
-      top: -33vh;
-    }
-
-    &:not(:first-of-type) {
-      .item:nth-child(2n+1) {
-        opacity: 0;
-      }
-    }
-  }
-}
